syntax = "proto3";

option go_package ="github.com/BetterGR/homework-microservice/homework_protos";

package Homework;
/*
The Homework domain manages all information related to assignments for each course,
including workflows for completing homework, submission tracking.
 */
service HomeworkService{
    // Returns all the homework assigned in a certain course.
    rpc GetHomework(GetHomeworkRequest) returns (GetHomeworkResponse);
    // Creates a new homework for a certain course and returns boolean response.
    rpc CreateHomework(CreateHomeworkRequest) returns (CreateHomeworkResponse);
}


// Definition of Homework message.
message Homework {
    // Unique ID for the homework.
    string id = 1;                
    // ID of the course the homework belongs to.
    string courseId = 2;          
    // Title of the homework.
    string title = 3;            
    // Description of the homework.
    string description = 4;       
    // Associated files for the homework.
    repeated File files = 5;    
    // Workflow instructions for completing the homework.
    string workflow = 6;        
    // Due date of the homework.
    string dueDate = 7;           
    // Submissions for this homework.
    repeated Submission submissions = 8; 
}
// Defining core types for the homework service.
// This message is used to represent Files in the homework.
message File {
    string filename = 1;       
    bytes content = 2;         
    string mimeType = 3;       
}
// This message is used to represent the new added feature workflows.
message Workflow {
    repeated string steps = 1; // Could be changed.
}
// This message is used to represent student Submissions.
message Submission {
    string studentId = 1;       
    string submissionTime = 2;  
    File submissionFile = 3;                     
    repeated string partnersId = 6; 
}


// Request message for getting homework containing the course id.
message GetHomeworkRequest{
    string courseId = 1;
}
// Response message containing the homework for said course.
message GetHomeworkResponse{
    repeated Homework Hw = 1;
}


// Request message for creating new homework.
message CreateHomeworkRequest{
    string courseId = 1;
    string Title = 2;
    string description = 3;
    repeated File HwFile = 4;
    Workflow workflow = 5;
    string dueDate = 6;
    repeated Submission submission = 7;
}
// Boolean response to give feedback in case the function failed.
message CreateHomeworkResponse{
    bool res = 1;
}